--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -5,6 +5,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 
 
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+
 @keyframes blink {
   0%, 100% {
     opacity: 0;
